--- a/src/index.html
+++ b/src/index.html
@@ -1,1 +1,10 @@
-<div>App loading...</div>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <title>Hubitat Update Manager</title>
+  </head>
+  <body>
+    <h1>App loading...</h1>
+  </body>
+</html>
